--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@
 
   /* Improved focus states for mobile */
   .focus-mobile {
-    @apply focus:outline-none focus:ring-2 focus:ring-rose-500 focus:ring-offset-2;
+    @apply focus:outline-none focus:ring-2 focus:ring-purple-400 focus:ring-offset-2;
   }
 
   /* Card hover effects that work well on mobile */
